--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
         
         /* Instruksjonsfelt */
         .instruction-section { margin-bottom: 25px; background: #f8f9fa; padding: 20px; border-radius: 10px; border: 1px solid #ddd; display: flex; flex-direction: column; align-items: center; gap: 15px; }
-        #textDisplay { font-size: 1.3rem; line-height: 1.5; color: #2c3e50; }
-        .audio-choice-text { font-size: 2.2rem !important; font-weight: bold; color: #2980b9 !important; margin-top: 10px; }
+#textDisplay { 
+    font-size: 1.1rem; /* Gjort litt mindre (fra 1.3rem) */
+    line-height: 1.4; 
+    color: #000000; /* Helt sort tekst */
+    font-weight: normal;
+}
 
+/* Spesifikk justering for den store teksten i oppgave 11 og 12 */
+.audio-choice-text { 
+    font-size: 1.6rem !important; /* Redusert betydelig (fra 2.2rem) */
+    font-weight: bold; 
+    color: #000000 !important; /* Endret fra blå til sort */
+    margin-top: 10px; 
+}
         audio { width: 100%; max-width: 450px; transform: scale(1.1); }
         .image-container { position: relative; display: inline-block; width: 100%; cursor: crosshair; }
         img.main-img { width: 100%; height: auto; border: 2px solid #333; border-radius: 5px; }
@@ -106,7 +117,7 @@
         .split-image { flex: 4; }
         .split-image img { width: 100%; height: auto; border-radius: 10px; border: 2px solid #333; }
         .split-questions { flex: 1; display: flex; flex-direction: column; gap: 10px; }
-        .split-questions h2 { font-size: 1.2rem !important; margin-bottom: 10px; color: #2c3e50; }
+        .split-questions h2 { font-size: 1.1rem !important; margin-bottom: 10px; color: #000000; }
         .split-questions .opt-btn { padding: 10px; font-size: 1rem; width: 100%; text-align: left; }
 
         .hidden { display: none !important; }
