--- a/index.html
+++ b/index.html
@@ -7,6 +7,43 @@
 <link rel="icon" type="image/png" href="LES.png">
 <link rel="apple-touch-icon" href="LES.png">
     <style>
+
+/* Startside-stil */
+#start-page {
+    text-align: left;
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 30px;
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+#start-page h1 { color: #2980b9; text-align: center; }
+
+.start-info {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin: 20px 0;
+}
+
+.start-btn {
+    display: block;
+    width: 250px;
+    margin: 30px auto;
+    padding: 20px;
+    background-color: #2ecc71;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.start-btn:hover { transform: scale(1.05); background-color: #27ae60; }
+
         html, body { margin: 0; padding: 0; width: 100%; overflow-x: hidden; height: 100%; }
         body { font-family: sans-serif; text-align: center; background: #f4f4f9; padding: 10px; box-sizing: border-box; padding-bottom: 120px; }
         .container { width: 98%; max-width: 1400px; margin: 10px auto; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); box-sizing: border-box; }
@@ -131,7 +168,30 @@
 </head>
 <body>
 
-<div id="quiz-wrap" class="container">
+<div id="start-page" class="container">
+    <h1>Nå skal vi øve på kartleggingsprøve! 📖</h1>
+    <div class="start-info">
+        <div style="background: #ebf5fb; padding: 15px; border-radius: 10px; border: 1px solid #3498db; margin-bottom: 20px; text-align: center;">
+            <p style="margin-top: 0;"><strong>Først: Sjekk at du har lyd i øreklokkene</strong></p>
+            <button class="opt-btn" onclick="new Audio('test.mp3').play()" style="background: #3498db; color: white; border: none; padding: 10px 20px;">
+                🔊 Trykk her for å teste lyden
+            </button>
+            <p style="font-size: 0.9rem; margin-bottom: 0; color: #555;">Hører du noen som snakker?</p>
+        </div>
+
+        <p>Hei! I denne prøven skal du løse forskjellige oppgaver:</p>
+        <ul>
+            <li>🎧 <strong>Lytt:</strong> Trykk på play-knappen for å høre oppgaven.</li>
+            <li>⚡ <strong>Flashword:</strong> Noen ord vises veldig raskt. Følg godt med i ruta!</li>
+            <li>🔍 <strong>Finn sted i bilde:</strong> Trykk på riktig sted i bildet.</li>
+            <li>⌨️ <strong>Skriv:</strong> Skriv ordet som passer til teksten som lese opp/bildet som vises.</li>
+        </ul>
+    </div>
+    <button class="start-btn" onclick="startQuiz()">Start nå ▶</button>
+</div>
+
+
+<div id="quiz-wrap" class="container hidden">
     <div class="instruction-section" id="inst-sec">
         <audio id="audioPlayer" controls></audio>
         <div id="textDisplay" class="hidden"></div>
@@ -163,7 +223,7 @@
         <div class="nav-inner">
             <button class="btn-nav" id="prevBtn" onclick="changeTask(-1)">Forrige</button>
             <div class="dots-container" id="dots"></div>
-            <button class="btn-nav" id="nextBtn" onclick="changeTask(1)">Neste</button>
+            <button class="btn-nav" id="nextBtn">Neste</button>
         </div>
     </div>
 </div>
@@ -381,25 +441,45 @@
 
     function saveTyping() { userChoices[currentIdx] = document.getElementById('wordInputField').value; updateNav(); }
 
-    function updateNav() {
-        const dots = document.getElementById('dots');
-        dots.innerHTML = "";
-        taskData.forEach((_, i) => {
-            const isComp = userChoices[i] !== null && userChoices[i] !== "";
-            const d = document.createElement('div');
-            d.className = `dot ${i === currentIdx ? 'active' : ''} ${isComp ? 'completed' : ''}`;
-            d.innerText = i + 1;
-            d.onclick = () => { currentIdx = i; loadTask(); };
-            dots.appendChild(d);
-        });
-        document.getElementById('prevBtn').disabled = currentIdx === 0;
-        document.getElementById('nextBtn').innerText = (currentIdx === taskData.length - 1) ? "Lever" : "Neste";
-    }
+function updateNav() {
+    const dots = document.getElementById('dots'); 
+    dots.innerHTML = "";
+    taskData.forEach((_, i) => {
+        const isComp = userChoices[i] !== null && userChoices[i] !== "";
+        const d = document.createElement('div');
+        d.className = `dot ${i === currentIdx ? 'active' : ''} ${isComp ? 'completed' : ''}`;
+        d.innerText = i + 1; 
+        d.onclick = () => { currentIdx = i; loadTask(); };
+        dots.appendChild(d);
+    });
 
-    function changeTask(step) {
-        if (step === 1 && currentIdx === taskData.length - 1) showResults();
-        else { currentIdx += step; loadTask(); }
+    // Kontroll for Forrige-knapp
+    document.getElementById('prevBtn').onclick = () => changeTask(-1);
+    document.getElementById('prevBtn').disabled = currentIdx === 0;
+    
+    // Kontroll for Neste/Lever-knapp
+    const nextBtn = document.getElementById('nextBtn');
+    if (currentIdx === taskData.length - 1) {
+        nextBtn.innerText = "Lever";
+        nextBtn.onclick = function() {
+            console.log("Lever trykket - viser resultater"); // Debug-linje
+            showResults();
+        };
+    } else {
+        nextBtn.innerText = "Neste";
+        nextBtn.onclick = function() {
+            changeTask(1);
+        };
     }
+}
+
+function changeTask(step) {
+    let newIdx = currentIdx + step;
+    if (newIdx >= 0 && newIdx < taskData.length) {
+        currentIdx = newIdx;
+        loadTask();
+    }
+}
 
     function showResults() {
         document.getElementById('quiz-wrap').classList.add('hidden');
@@ -422,7 +502,11 @@
         document.getElementById('final-score').innerText = `Du fikk ${score} av ${taskData.length} riktige!`;
     }
 
-    loadTask();
+function startQuiz() {
+    document.getElementById('start-page').classList.add('hidden');
+    document.getElementById('quiz-wrap').classList.remove('hidden');
+    loadTask(); // Nå starter vi oppgavene
+}
 </script>
 </body>
 </html>
